# hcnet-core19.4

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  Cargo.toml  INSTALL-Windows.md  INSTALL.md  LICENSE-APACHE.txt  Makefile.am  README.md  SECURITY.md  ci-build.sh  configure.ac  hash-xdrs.sh  install-rust.sh
.devcontainer/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md
Builds/VisualStudio/: stellar-core.sln  stellar-core.vcxproj  stellar-core.vcxproj.filters
docker/: Dockerfile  Dockerfile.testing  Makefile  README.md  setup
docs/: architecture.md  db-schema.md  fuzzing.md  hcnet-core_example.cfg  hcnet-core_standalone.cfg  history.md  integration.md  ledger.md  metrics.md  quick-reference.md  readme.md  stellar-core_testnet_legacy.cfg  stellar-core_testnet_validator.cfg  tx-simulation.md  versioning.md
docs/software/: admin.md  commands.md  ledger_query_examples.md  performance.md  security-protocol-release-notes.md  testnet.md
lib/: spdlog.cpp
lib/fmt/: README.rst
lib/libmedida/: CMakeLists.txt
lib/util/: cbitset.c  cbitset.h  cbitset_portability.h  stdrandom.h  uint128_t.h
lib/xdrpp/: COPYING
m4/: ax_fresh_compiler.m4
performance-eval/: performance-eval.md
scripts/: OverlaySurvey.py  README.md
src/: Makefile.am
src/bucket/: Bucket.cpp  Bucket.h  BucketApplicator.cpp  BucketApplicator.h  BucketInputIterator.h  (+19 more)
src/rust/: Cargo.toml  CppShims.h  RustVecXdrMarshal.h
src/rust/src/: b64.rs  contract.rs  lib.rs  log.rs
(+671 files in other folders)
