[package]
name = "hcnet-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[lib]
name = "rust_hcnet_core"
crate-type = ["staticlib"]

[dependencies]
log = "0.4.17"
cxx = "1.0"
im-rc = "15.0.0"
base64 = "0.13.0"
rustc-simple-version = "0.1.0"
soroban-env-host = { git = "https://github.com/hcnet/rs-soroban-env", rev = "4aabfbf", features = [
    "vm",
] }
soroban-test-wasms = { git = "https://github.com/hcnet/rs-soroban-env", rev = "4aabfbf" }
